scrollbar issue resolved

--- a/src/sass/components/_media_1200.scss
+++ b/src/sass/components/_media_1200.scss
@@ -4,7 +4,7 @@
   }
 
   .container {
-    max-width: $lg-contentWidth;
+    max-width: 1167px;
     line-height: 20px;
     padding-left: 0;
     padding-right: 0;
@@ -93,7 +93,7 @@
   }
 
   .content-area {
-    width: $lg-contentWidth;
+    width: 1168px;
     height: 440px;
     padding: 70px 0;
     margin-left: 15px;
