--- a/src/sass/components/_media_768.scss
+++ b/src/sass/components/_media_768.scss
@@ -19,7 +19,6 @@
   }
 
   section {
-    width: calc(screen - 21px);
     margin: 0 auto;
   }
 
